tests/fsharp/typecheck/sigs/neg65.bsl

neg65.fs(6,23,6,24): parse error FS0010: Unexpected symbol ')' in binding. Expected incomplete structured construct at or before this point or other token.
